# anchor

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/benchmark/: cases.json
data/corpus/: acmecloud_fy2025.json
src/anchor/: __init__.py  benchmark.py  claim.py  cli.py  dataset.py  errors.py  evaluate.py  extract.py  interface.py  judge.py  judge_anthropic.py  parsing.py  report.py  score.py  verify.py
src/anchor/agent/: __init__.py  adapter.py  graph.py  retriever.py  state.py
tests/: stubs.py  test_agent_smoke.py  test_benchmark.py  test_claim.py  test_cli.py  test_dataset.py  test_evaluate.py  test_extract.py  test_interface.py  test_judge.py  test_judge_anthropic.py  test_package.py  test_report.py  test_score.py  test_verify.py
