[project]
name = "anchor"
version = "0.1.0"
description = "Claim-level groundedness evaluation harness for RAG agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
]

# The reference agent's stack (langgraph, embeddings, checkpointer drivers)
# will land here as an `agent` extra — the core harness must stay lightweight.

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anchor"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "UP",  # modernize syntax
    "B",   # bugbear (likely bugs)
    "SIM", # simplifications
]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
