[project]
name = "anchor"
version = "0.1.0"
description = "Claim-level groundedness evaluation harness for RAG agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
]

# The core harness stays lightweight (D9); agent and judge stacks are opt-in.
[project.optional-dependencies]
agent = [
    "langgraph>=1.0",
    "langgraph-checkpoint-sqlite>=2.0",
]
anthropic = [
    "anthropic>=0.40",
]

[project.scripts]
anchor = "anchor.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anchor"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "UP",  # modernize syntax
    "B",   # bugbear (likely bugs)
    "SIM", # simplifications
]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
